--- a/LFLTrunkLib/LFLSrc/聊天页/view/LFLChatRightMessageViewCell.xib
+++ b/LFLTrunkLib/LFLSrc/聊天页/view/LFLChatRightMessageViewCell.xib
@@ -21,9 +21,12 @@
                             <constraint firstAttribute="width" constant="40" id="cUK-Zh-cpT"/>
                         </constraints>
                     </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_chat_bubble.png" translatesAutoresizingMaskIntoConstraints="NO" id="0cn-My-2rV">
+                        <rect key="frame" x="226" y="11" width="144" height="40"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7c-pF-Fd0" customClass="TTTAttributedLabel">
-                        <rect key="frame" x="242" y="21" width="120" height="20"/>
-                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="236" y="21" width="120" height="20"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="120" id="BPM-f4-eiU"/>
                             <constraint firstAttribute="height" constant="20" id="Zfz-6X-isB"/>
@@ -35,22 +38,28 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="O7c-pF-Fd0" firstAttribute="top" secondItem="Lt4-iY-eaM" secondAttribute="top" constant="10" id="4Mr-eU-8BV"/>
-                    <constraint firstItem="Lt4-iY-eaM" firstAttribute="leading" secondItem="O7c-pF-Fd0" secondAttribute="trailing" constant="12" id="Tcu-SC-gi7"/>
+                    <constraint firstItem="O7c-pF-Fd0" firstAttribute="leading" secondItem="0cn-My-2rV" secondAttribute="leading" constant="10" id="4Zy-PI-dny"/>
+                    <constraint firstItem="0cn-My-2rV" firstAttribute="trailing" secondItem="O7c-pF-Fd0" secondAttribute="trailing" constant="14" id="8ie-LA-Idt"/>
+                    <constraint firstItem="O7c-pF-Fd0" firstAttribute="top" secondItem="0cn-My-2rV" secondAttribute="top" constant="10" id="Ici-EN-amT"/>
+                    <constraint firstItem="Lt4-iY-eaM" firstAttribute="leading" secondItem="O7c-pF-Fd0" secondAttribute="trailing" constant="18" id="Tcu-SC-gi7"/>
+                    <constraint firstItem="0cn-My-2rV" firstAttribute="bottom" secondItem="O7c-pF-Fd0" secondAttribute="bottom" constant="10" id="W09-bA-H1R"/>
                     <constraint firstItem="Lt4-iY-eaM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="XPK-yH-cu0"/>
                     <constraint firstItem="O7c-pF-Fd0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="65" id="hI2-pI-AlO"/>
                     <constraint firstAttribute="trailing" secondItem="Lt4-iY-eaM" secondAttribute="trailing" constant="8" id="lXB-zr-vIS"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="bubbleImageView" destination="0cn-My-2rV" id="ovk-r5-eay"/>
+                <outlet property="contentLabel" destination="O7c-pF-Fd0" id="a5q-wj-bb3"/>
+                <outlet property="contentLabelHeight" destination="Zfz-6X-isB" id="Hnn-Zg-0b4"/>
+                <outlet property="contentLabelWidth" destination="BPM-f4-eiU" id="OjJ-1y-W0Q"/>
                 <outlet property="rightHeaderImageView" destination="Lt4-iY-eaM" id="W97-r8-02J"/>
-                <outlet property="rightMessageLabel" destination="O7c-pF-Fd0" id="Sui-YK-kJ8"/>
-                <outlet property="rightMessageLabelHeight" destination="Zfz-6X-isB" id="YO6-BS-jie"/>
-                <outlet property="rightMessageLabelWidth" destination="BPM-f4-eiU" id="S9a-Uo-L2W"/>
             </connections>
             <point key="canvasLocation" x="-917" y="625.5"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="user_chat_bubble.png" width="27" height="40"/>
         <image name="user_head_icon.png" width="40" height="40"/>
     </resources>
 </document>
