--- a/LFLTrunkLib/LFLSrc/聊天页/view/LFLChatRightMessageViewCell.xib
+++ b/LFLTrunkLib/LFLSrc/聊天页/view/LFLChatRightMessageViewCell.xib
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="422" height="94"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_head_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="Lt4-iY-eaM">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right_head_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="Lt4-iY-eaM">
                         <rect key="frame" x="374" y="0.0" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="bq6-jy-SV9"/>
@@ -22,16 +22,16 @@
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0cn-My-2rV">
-                        <rect key="frame" x="285" y="1" width="85" height="40"/>
+                        <rect key="frame" x="225" y="0.0" width="145" height="42"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7c-pF-Fd0" customClass="TTTAttributedLabel">
-                        <rect key="frame" x="296" y="11" width="60" height="20"/>
+                        <rect key="frame" x="236" y="11" width="120" height="20"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="BPM-f4-eiU"/>
+                            <constraint firstAttribute="width" constant="120" id="BPM-f4-eiU"/>
                             <constraint firstAttribute="height" constant="20" id="Zfz-6X-isB"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -41,11 +41,11 @@
                     <constraint firstItem="O7c-pF-Fd0" firstAttribute="top" secondItem="Lt4-iY-eaM" secondAttribute="top" constant="11" id="4Mr-eU-8BV"/>
                     <constraint firstItem="O7c-pF-Fd0" firstAttribute="leading" secondItem="0cn-My-2rV" secondAttribute="leading" constant="11" id="4Zy-PI-dny"/>
                     <constraint firstItem="0cn-My-2rV" firstAttribute="trailing" secondItem="O7c-pF-Fd0" secondAttribute="trailing" constant="14" id="8ie-LA-Idt"/>
-                    <constraint firstItem="O7c-pF-Fd0" firstAttribute="top" secondItem="0cn-My-2rV" secondAttribute="top" constant="10" id="Ici-EN-amT"/>
+                    <constraint firstItem="O7c-pF-Fd0" firstAttribute="top" secondItem="0cn-My-2rV" secondAttribute="top" constant="11" id="Ici-EN-amT"/>
                     <constraint firstItem="Lt4-iY-eaM" firstAttribute="leading" secondItem="O7c-pF-Fd0" secondAttribute="trailing" constant="18" id="Tcu-SC-gi7"/>
-                    <constraint firstItem="0cn-My-2rV" firstAttribute="bottom" secondItem="O7c-pF-Fd0" secondAttribute="bottom" constant="10" id="W09-bA-H1R"/>
+                    <constraint firstItem="0cn-My-2rV" firstAttribute="bottom" secondItem="O7c-pF-Fd0" secondAttribute="bottom" constant="11" id="W09-bA-H1R"/>
                     <constraint firstItem="Lt4-iY-eaM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="XPK-yH-cu0"/>
-                    <constraint firstItem="O7c-pF-Fd0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" priority="250" constant="65" id="hI2-pI-AlO"/>
+                    <constraint firstItem="O7c-pF-Fd0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" priority="250" constant="110" id="hI2-pI-AlO"/>
                     <constraint firstAttribute="trailing" secondItem="Lt4-iY-eaM" secondAttribute="trailing" constant="8" id="lXB-zr-vIS"/>
                 </constraints>
             </tableViewCellContentView>
@@ -56,10 +56,10 @@
                 <outlet property="contentLabelWidth" destination="BPM-f4-eiU" id="OjJ-1y-W0Q"/>
                 <outlet property="rightHeaderImageView" destination="Lt4-iY-eaM" id="W97-r8-02J"/>
             </connections>
-            <point key="canvasLocation" x="-1376" y="703.5"/>
+            <point key="canvasLocation" x="-1732" y="784.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="user_head_icon.png" width="40" height="40"/>
+        <image name="right_head_icon.png" width="40" height="40"/>
     </resources>
 </document>
