--- a/LFLTrunkLib/LFLSrc/聊天页/viewcontroller/LFLChatViewController.xib
+++ b/LFLTrunkLib/LFLSrc/聊天页/viewcontroller/LFLChatViewController.xib
@@ -17,8 +17,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GSn-Fb-Al0">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="523"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="GSn-Fb-Al0">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="518"/>
                     <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="sp4-Wi-bNc"/>
@@ -28,7 +28,7 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="GSn-Fb-Al0" secondAttribute="bottom" constant="45" id="0EP-Fn-d3g"/>
+                <constraint firstAttribute="bottom" secondItem="GSn-Fb-Al0" secondAttribute="bottom" constant="50" id="0EP-Fn-d3g"/>
                 <constraint firstAttribute="trailing" secondItem="GSn-Fb-Al0" secondAttribute="trailing" id="1DG-10-9lJ"/>
                 <constraint firstItem="GSn-Fb-Al0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="FdA-4c-53D"/>
                 <constraint firstItem="GSn-Fb-Al0" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="cla-QW-1XN"/>
