--- a/LFLTrunkLib/LFLSrc/聊天页/view/气泡消息/LFLChatLeftMessageViewCell.xib
+++ b/LFLTrunkLib/LFLSrc/聊天页/view/气泡消息/LFLChatLeftMessageViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
@@ -10,21 +11,21 @@
             <rect key="frame" x="0.0" y="0.0" width="481" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="481" height="84"/>
+                <rect key="frame" x="0.0" y="0.0" width="481" height="83.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ll_head_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="jUx-Uj-Rqz">
-                        <rect key="frame" x="11" y="0.0" width="40" height="40"/>
+                        <rect key="frame" x="11" y="5" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="McE-IK-p5J"/>
                             <constraint firstAttribute="height" constant="40" id="ujV-aw-70J"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hKi-hc-H4r">
-                        <rect key="frame" x="55" y="0.0" width="145" height="42"/>
+                        <rect key="frame" x="55" y="5" width="145" height="42"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="100" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUf-rH-5zI" customClass="TTTAttributedLabel">
-                        <rect key="frame" x="69" y="11" width="120" height="20"/>
+                        <rect key="frame" x="69" y="16" width="120" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="120" id="1rf-WC-XwG"/>
                             <constraint firstAttribute="height" constant="20" id="fvv-Nc-mBN"/>
@@ -36,7 +37,7 @@
                 </subviews>
                 <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="jUx-Uj-Rqz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="1BG-as-3WD"/>
+                    <constraint firstItem="jUx-Uj-Rqz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="1BG-as-3WD"/>
                     <constraint firstItem="VUf-rH-5zI" firstAttribute="leading" secondItem="jUx-Uj-Rqz" secondAttribute="trailing" constant="18" id="2bm-hq-DmB"/>
                     <constraint firstItem="VUf-rH-5zI" firstAttribute="leading" secondItem="hKi-hc-H4r" secondAttribute="leading" constant="14" id="44f-Vf-jnT"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="VUf-rH-5zI" secondAttribute="trailing" priority="250" constant="110" id="KJF-kI-aLH"/>
