--- a/LFLTrunkLib/LFLSrc/聊天页/view/气泡消息/LFLChatRightMessageViewCell.xib
+++ b/LFLTrunkLib/LFLSrc/聊天页/view/气泡消息/LFLChatRightMessageViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
@@ -10,21 +11,21 @@
             <rect key="frame" x="0.0" y="0.0" width="422" height="95"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="422" height="95"/>
+                <rect key="frame" x="0.0" y="0.0" width="422" height="94.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right_head_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="Lt4-iY-eaM">
-                        <rect key="frame" x="374" y="0.0" width="40" height="40"/>
+                        <rect key="frame" x="374" y="5" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="bq6-jy-SV9"/>
                             <constraint firstAttribute="width" constant="40" id="cUK-Zh-cpT"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0cn-My-2rV">
-                        <rect key="frame" x="225" y="0.0" width="145" height="42"/>
+                        <rect key="frame" x="225" y="5" width="145" height="42"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="100" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7c-pF-Fd0" customClass="TTTAttributedLabel">
-                        <rect key="frame" x="236" y="11" width="120" height="20"/>
+                        <rect key="frame" x="236" y="16" width="120" height="20"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="120" id="BPM-f4-eiU"/>
@@ -43,7 +44,7 @@
                     <constraint firstItem="O7c-pF-Fd0" firstAttribute="top" secondItem="0cn-My-2rV" secondAttribute="top" constant="11" id="Ici-EN-amT"/>
                     <constraint firstItem="Lt4-iY-eaM" firstAttribute="leading" secondItem="O7c-pF-Fd0" secondAttribute="trailing" constant="18" id="Tcu-SC-gi7"/>
                     <constraint firstItem="0cn-My-2rV" firstAttribute="bottom" secondItem="O7c-pF-Fd0" secondAttribute="bottom" constant="11" id="W09-bA-H1R"/>
-                    <constraint firstItem="Lt4-iY-eaM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="XPK-yH-cu0"/>
+                    <constraint firstItem="Lt4-iY-eaM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="XPK-yH-cu0"/>
                     <constraint firstItem="O7c-pF-Fd0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" priority="250" constant="110" id="hI2-pI-AlO"/>
                     <constraint firstAttribute="trailing" secondItem="Lt4-iY-eaM" secondAttribute="trailing" constant="8" id="lXB-zr-vIS"/>
                 </constraints>
